Documentation edits made through Mintlify web editor

--- a/physical_components/drivetrain.mdx
+++ b/physical_components/drivetrain.mdx
@@ -151,3 +151,5 @@ public class FieldCentricTeleOpDrive {
   r = ((getAngle() - targetDirection) / 40) + r;
   ```
 </Tip>
+
+For more information about coding mecanum drives and field centric, click [here](https://gm0.org/en/latest/docs/software/tutorials/mecanum-drive.html).
