--- a/installation.mdx
+++ b/installation.mdx
@@ -6,13 +6,11 @@ mode: "wide"
 
 <Tabs>
   <Tab title="Github">
-    
-
     ## Github
 
     Github is a software versioning and management tool that enables easy collaboration and code base design.
 
-    1. Go to the[ FTC Robot Controller](https://github.com/FIRST-Tech-Challenge/FtcRobotController) and press "Fork" 
+    1. Go to the[ FTC Robot Controller](https://github.com/FIRST-Tech-Challenge/FtcRobotController) and press "Fork"
 
        ![](/images/ftc_repo.png)
     2. To share the repository with collaborators, go into the new repository, press "Settings", "Collaborators and teams", and add people or teams
@@ -52,16 +50,14 @@ mode: "wide"
        </Info>
   </Tab>
   <Tab title="ADB WiFi">
-    ## <span id="adb_wifi">
-      ADB WiFi
-    </span>
+    ## <span id="adb_wifi">ADB WiFi</span>
 
     ADB WiFi is a extension that allows you to connect to the Robot Control Hub over WiFi.
 
     1. Go to Settings, "Plugins" and search "ADB Wi-Fi" and Install. Once completed, press "OK"
 
        ![](/images/adb_wifi.png)
-    2. To use ADB WiFi, connect to the robot's WiFi network before selecting the WiFi icon on the right bar and selecting connect to the Robot Controller 
+    2. To use ADB WiFi, connect to the robot's WiFi network before selecting the WiFi icon on the right bar and selecting connect to the Robot Controller
 
        ![](/images/adb_wifi_use.png)
 
@@ -69,11 +65,4 @@ mode: "wide"
          Sometimes, you may need to plug in your computer to the Robot Controller before the device can be connected to via WiFi. Additionally, you may also have to do the first install each time you open the app on another WiFi network to download necessary imports and libraries.
        </Note>
   </Tab>
-  <Tab title="Roadrunner">
-    ## Roadrunner
-
-    Roadrunner is a robot localization, path following, and action library designed for Autonomous period robot control.
-  </Tab>
 </Tabs>
-
-Installation instructions can be found [here](https://rr.brott.dev/docs/v1-0/installation/).
