--- a/installation.mdx
+++ b/installation.mdx
@@ -41,7 +41,7 @@ mode: "wide"
          ![](/images/version_17.png)
        </Note>
        ![](/images/change_jdk.png)
-    7. To boot programs onto the robot, ensure the robot is either connected to the computer via USB cable or wifi using [ADB WiFi](#adb_wifi), ensure "TeamCode" is selected on the top bar and press the "Run" or "Restart" button
+    7. To boot programs onto the robot, ensure the robot is either connected to the computer via USB cable or wifi using [ADB WiFi](#adb_wifi_tab), ensure "TeamCode" is selected on the top bar and press the "Run" or "Restart" button
 
        ![](/images/run_androids.png)
 
@@ -50,7 +50,7 @@ mode: "wide"
        </Info>
   </Tab>
   <Tab title="ADB WiFi">
-    ## <span id="adb_wifi">ADB WiFi</span>
+    ## <span id="adb_wifi_tab">ADB WiFi</span>
 
     ADB WiFi is a extension that allows you to connect to the Robot Control Hub over WiFi.
 
